Fork an intermediate cc image.

--- a/base/BUILD
+++ b/base/BUILD
@@ -18,3 +18,13 @@ docker_build(
         "@openssl//file",
     ],
 )
+
+# An intermediate image for Java and other "mostly statically compiled languages"
+docker_build(
+    name = "cc",
+    base = ":base",
+    debs = [
+        "@libgcc1//file",
+        "@libstdcpp6//file",
+    ],
+)
