Add a jetty image.

--- a/base/BUILD
+++ b/base/BUILD
@@ -28,3 +28,11 @@ docker_build(
         "@libstdcpp6//file",
     ],
 )
+
+docker_build(
+    name = "debug",
+    base = ":cc",
+    files = [
+        "@busybox//file",
+    ],
+)
