--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,8 @@ install:
 script:
   - bazel clean && bazel build //...
 # We don't have any tests yet so this fails. Uncomment when we do.
-#  - bazel clean && bazel test --test_output=errors //...
+  - bazel build //base:base.tar && docker load -i bazel-bin/base/base.tar && bazel run //base:base
+  - bazel test --test_output=errors //...
   - ./buildifier.sh
 
 notifications:
