--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,8 +9,14 @@ steps:
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/java:java8', 'gcr.io/$PROJECT_ID/java:latest']
 
+- name: gcr.io/cloud-builders/bazel
+  args: ['run', '//java/jetty']
+- name: gcr.io/cloud-builders/docker
+  args: ['tag', 'bazel/java/jetty:jetty', 'gcr.io/$PROJECT_ID/java/jetty:latest']
+
 # The resulting images to push to GCR.
 images: [
   'gcr.io/$PROJECT_ID/base:latest',
   'gcr.io/$PROJECT_ID/java:latest',
+  'gcr.io/$PROJECT_ID/java/jetty:latest',
 ]
