--- a/base/BUILD
+++ b/base/BUILD
@@ -3,6 +3,7 @@ package(default_visibility = ["//visibility:public"])
 load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build")
 load("@io_bazel_rules_docker//docker/contrib:passwd.bzl", "passwd_file")
 load("@runtimes_common//structure_tests:tests.bzl", "structure_test")
+load("@io_bazel_rules_go//go:def.bzl", "go_binary")
 
 # Create a default passwd_file rule.
 
@@ -21,9 +22,22 @@ docker_build(
     files = [":empty"],
 )
 
+load("//cacerts:cacerts.bzl", "cacerts")
+
+cacerts(
+    name = "cacerts",
+)
+
+docker_build(
+    name = "with_certs",
+    base = ":with_tmp",
+    directory = "/etc/ssl/certs",
+    files = [":cacerts"],
+)
+
 docker_build(
     name = "base",
-    base = ":with_tmp",
+    base = ":with_certs",
     debs = [
         "@glibc//file",
         "@libssl//file",
@@ -46,4 +60,22 @@ structure_test(
     name = "base_test",
     config = "testdata/base.yaml",
     image = ":base",
+)
+
+go_binary(
+    name = "check_certs",
+    srcs = ["testdata/check_certs.go"],
+)
+
+docker_build(
+    name = "check_certs_image",
+    base = "//base:base",
+    files = [":check_certs"],
+    visibility = ["//visibility:private"],
+)
+
+structure_test(
+    name = "certs_test",
+    config = "testdata/certs.yaml",
+    image = ":check_certs_image",
 )
