--- a/cacerts/BUILD
+++ b/cacerts/BUILD
@@ -1,4 +1,4 @@
-package(default_visibility = ["//visibility:public"])
+package(default_visibility = ["//:__subpackages__"])
 
 sh_binary(
     name = "extract_certs",
