--- a/base/testdata/base.yaml
+++ b/base/testdata/base.yaml
@@ -15,3 +15,6 @@ fileExistenceTests:
 - name: certs
   path: '/etc/ssl/certs/ca-certificates.crt'
   shouldExist: true
+- name: certs_copyright
+  path: '/usr/share/doc/ca-certificates/copyright'
+  shouldExist: true
