Add ca-certificates to our base image. (#38)
* Add ca-certificates to our base image.

* Code review feedback.

* Add copyright headers.

* Add copyright, switch to a tar.

--- a/base/BUILD
+++ b/base/BUILD
@@ -3,6 +3,7 @@ package(default_visibility = ["//visibility:public"])
 load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build")
 load("@io_bazel_rules_docker//docker/contrib:passwd.bzl", "passwd_file")
 load("@runtimes_common//structure_tests:tests.bzl", "structure_test")
+load("@io_bazel_rules_go//go:def.bzl", "go_binary")
 
 # Create a default passwd_file rule.
 
@@ -21,6 +22,12 @@ docker_build(
     files = [":empty"],
 )
 
+load("//cacerts:cacerts.bzl", "cacerts")
+
+cacerts(
+    name = "cacerts",
+)
+
 docker_build(
     name = "base",
     base = ":with_tmp",
@@ -29,7 +36,10 @@ docker_build(
         "@libssl//file",
         "@openssl//file",
     ],
-    tars = [":base_passwd.passwd.tar"],
+    tars = [
+        ":base_passwd.passwd.tar",
+        ":cacerts.tar",
+    ],
 )
 
 # An intermediate image for Java and other "mostly statically compiled languages"
@@ -46,4 +56,22 @@ structure_test(
     name = "base_test",
     config = "testdata/base.yaml",
     image = ":base",
+)
+
+go_binary(
+    name = "check_certs",
+    srcs = ["testdata/check_certs.go"],
+)
+
+docker_build(
+    name = "check_certs_image",
+    base = "//base:base",
+    files = [":check_certs"],
+    visibility = ["//visibility:private"],
+)
+
+structure_test(
+    name = "certs_test",
+    config = "testdata/certs.yaml",
+    image = ":check_certs_image",
 )
