--- a/base/testdata/base.yaml
+++ b/base/testdata/base.yaml
@@ -12,3 +12,9 @@ fileExistenceTests:
 - name: passwd
   path: '/etc/passwd'
   shouldExist: true
+- name: certs
+  path: '/etc/ssl/certs/ca-certificates.crt'
+  shouldExist: true
+- name: certs_copyright
+  path: '/usr/share/doc/ca-certificates/copyright'
+  shouldExist: true
