--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,6 +5,11 @@ steps:
   args: ['tag', 'bazel/base:base', 'gcr.io/$PROJECT_ID/base:latest']
 
 - name: gcr.io/cloud-builders/bazel
+  args: ['run', '//cc:cc']
+- name: gcr.io/cloud-builders/docker
+  args: ['tag', 'bazel/cc:cc', 'gcr.io/$PROJECT_ID/cc:latest']
+
+- name: gcr.io/cloud-builders/bazel
   args: ['run', '//java:java8']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/java:java8', 'gcr.io/$PROJECT_ID/java:latest']
@@ -22,6 +27,7 @@ steps:
 # The resulting images to push to GCR.
 images: [
   'gcr.io/$PROJECT_ID/base:latest',
+  'gcr.io/$PROJECT_ID/cc:latest',
   'gcr.io/$PROJECT_ID/java:latest',
   'gcr.io/$PROJECT_ID/java/jetty:latest',
   'gcr.io/$PROJECT_ID/python2.7:latest'
