Add two package manager rules for debian
Adds two rules:

dpkg_src
Resolves a debian package mirror and parses the package list into a
json file

dpkg
With a reference to the parsed package json file, find a package and
download the .deb

Use dpkg rules instead of http_files

Use deb.debian.org, run buildifier

Upload to distroless bucket

--- a/base/BUILD
+++ b/base/BUILD
@@ -32,9 +32,9 @@ docker_build(
     name = "base",
     base = ":with_tmp",
     debs = [
-        "@glibc//file",
-        "@libssl//file",
-        "@openssl//file",
+        "@libc6//file:pkg.deb",
+        "@libssl1.0.0//file:pkg.deb",
+        "@openssl//file:pkg.deb",
     ],
     tars = [
         ":base_passwd.passwd.tar",
