Refactor dpkg rules
* Allows multiple sources on the dpkg() rule
* Automatically renames packages that are not valid bazel rule names.
Prints out a warning with instructions on how to reference the
resulting deb.
* Allows multiple packages to be part of the same dpkg() rule
* Bumps version of dpkg_parser.par to v0.2

Address feedback

More feedback, pylint

--- a/base/BUILD
+++ b/base/BUILD
@@ -28,13 +28,15 @@ cacerts(
     name = "cacerts",
 )
 
+load("@package_bundle//file:packages.bzl", "packages")
+
 docker_build(
     name = "base",
     base = ":with_tmp",
     debs = [
-        "@libc6//file:pkg.deb",
-        "@libssl1.0.0//file:pkg.deb",
-        "@openssl//file:pkg.deb",
+        packages["libc6"],
+        packages["libssl1.0.0"],
+        packages["openssl"],
     ],
     tars = [
         ":base_passwd.passwd.tar",
