--- a/java/BUILD
+++ b/java/BUILD
@@ -1,13 +1,14 @@
 package(default_visibility = ["//visibility:public"])
 
 load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build")
+load("@package_bundle//file:packages.bzl", "packages")
 
 docker_build(
     name = "java8",
     base = "//cc:cc",
     debs = [
-        "@zlib1g//file:pkg.deb",
-        "@openjdk-8-jre-headless//file:pkg.deb",
+        packages["zlib1g"],
+        packages["openjdk-8-jre-headless"],
     ],
     entrypoint = [
         "/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java",
