--- a/package_manager/BUILD
+++ b/package_manager/BUILD
@@ -5,12 +5,20 @@ par_binary(
     srcs = glob(["**/*.py"]),
     main = "dpkg_parser.py",
     visibility = ["//visibility:public"],
-    deps = [":parse_metadata"],
+    deps = [
+        ":parse_metadata",
+        ":util",
+    ],
 )
 
 py_library(
     name = "parse_metadata",
     srcs = ["parse_metadata.py"],
+)
+
+py_library(
+    name = "util",
+    srcs = ["util.py"],
 )
 
 py_test(
@@ -19,4 +27,12 @@ py_test(
     srcs = ["parse_metadata_test.py"],
     data = ["testdata/Packages.txt"],
     deps = [":parse_metadata"],
+)
+
+py_test(
+    name = "util_test",
+    size = "small",
+    srcs = ["util_test.py"],
+    data = ["testdata/checksum.txt"],
+    deps = [":util"],
 )
