--- a/python2.7/BUILD
+++ b/python2.7/BUILD
@@ -2,15 +2,16 @@ package(default_visibility = ["//visibility:public"])
 
 load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build")
 load("@runtimes_common//structure_tests:tests.bzl", "structure_test")
+load("@package_bundle//file:packages.bzl", "packages")
 
 docker_build(
     name = "python27",
     base = "//base:base",
     debs = [
-        "@zlib1g//file:pkg.deb",
-        "@python2.7-minimal//file:pkg.deb",
-        "@libpython2.7-minimal//file:pkg.deb",
-        "@libpython2.7-stdlib//file:pkg.deb",
+        packages["zlib1g"],
+        packages["python2.7-minimal"],
+        packages["libpython2.7-minimal"],
+        packages["libpython2.7-stdlib"],
     ],
     entrypoint = [
         "/usr/bin/python2.7",
