Add a version-agnostic symlink

--- a/python2.7/BUILD
+++ b/python2.7/BUILD
@@ -15,6 +15,9 @@ docker_build(
     entrypoint = [
         "/usr/bin/python2.7",
     ],
+    symlinks = {
+        "/usr/bin/python": "/usr/bin/python2.7",
+    },
 )
 
 structure_test(
