--- a/cc/BUILD
+++ b/cc/BUILD
@@ -1,14 +1,14 @@
 package(default_visibility = ["//visibility:public"])
 
 load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build")
-load("@package_bundle//file:packages.bzl", "packages")
+load("@debian_jessie_amd64//debs:deb_packages.bzl", "debian_jessie_amd64")
 
 # An intermediate image for Java and other "mostly statically" compiled languages
 docker_build(
     name = "cc",
     base = "//base:base",
     debs = [
-        packages["libgcc1"],
-        packages["libstdc++6"],
+        debian_jessie_amd64["libgcc1"],
+        debian_jessie_amd64["libstdc++6"],
     ],
 )
