--- a/python2.7/BUILD
+++ b/python2.7/BUILD
@@ -2,16 +2,16 @@ package(default_visibility = ["//visibility:public"])
 
 load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build")
 load("@runtimes_common//structure_tests:tests.bzl", "structure_test")
-load("@package_bundle//file:packages.bzl", "packages")
+load("@debian_jessie_amd64//debs:deb_packages.bzl", "debian_jessie_amd64")
 
 docker_build(
     name = "python27",
     base = "//base:base",
     debs = [
-        packages["zlib1g"],
-        packages["python2.7-minimal"],
-        packages["libpython2.7-minimal"],
-        packages["libpython2.7-stdlib"],
+        debian_jessie_amd64["zlib1g"],
+        debian_jessie_amd64["python2.7-minimal"],
+        debian_jessie_amd64["libpython2.7-minimal"],
+        debian_jessie_amd64["libpython2.7-stdlib"],
     ],
     entrypoint = [
         "/usr/bin/python2.7",
