Add /etc/os-release file generation package rules
Adds another output file to the dpkg_src rule with os-release-like
metadata about the distribution

Add a structure test validation for /etc/os-release in the base image

--- a/base/testdata/base.yaml
+++ b/base/testdata/base.yaml
@@ -12,6 +12,9 @@ fileExistenceTests:
 - name: passwd
   path: '/etc/passwd'
   shouldExist: true
+- name: etc-os-release
+  path: '/etc/os-release'
+  shouldExist: true
 - name: certs
   path: '/etc/ssl/certs/ca-certificates.crt'
   shouldExist: true
