--- a/busybox/BUILD
+++ b/busybox/BUILD
@@ -1,6 +1,5 @@
-package(default_visibility = ["//visibility:public"])
+package(default_visibility = ["//base:__subpackages__"])
 
-load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build")
 load("@runtimes_common//structure_tests:tests.bzl", "structure_test")
 
 # For convenience, rename busybox-x86_64 to busybox.
@@ -14,24 +13,4 @@ genrule(
            done; \
            cd ..; \
            tar -cf $@ busybox",
-)
-
-# A debug image with busybox available.
-docker_build(
-    name = "debug",
-    base = "//cc:cc",
-    directory = "/",
-    entrypoint = ["/busybox/sh"],
-    env = {
-        "PATH": "/busybox",
-    },
-    tars = [
-        ":busybox.tar",
-    ],
-)
-
-structure_test(
-    name = "debug_test",
-    config = "testdata/debug.yaml",
-    image = ":debug",
 )
