--- a/cc/BUILD
+++ b/cc/BUILD
@@ -4,11 +4,14 @@ load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build")
 load("@package_bundle//file:packages.bzl", "packages")
 
 # An intermediate image for Java and other "mostly statically" compiled languages
-docker_build(
-    name = "cc",
-    base = "//base:base",
+[docker_build(
+    name = "cc" if not mode else mode[1:],
+    base = "//base" + mode,
     debs = [
         packages["libgcc1"],
         packages["libstdc++6"],
     ],
-)
+) for mode in [
+    "",
+    ":debug",
+]]
