--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,40 +1,4 @@
 steps:
 - name: gcr.io/cloud-builders/bazel
-  args: ['run', '//base']
-- name: gcr.io/cloud-builders/docker
-  args: ['tag', 'bazel/base:base', 'gcr.io/$PROJECT_ID/base:latest']
-
-- name: gcr.io/cloud-builders/bazel
-  args: ['run', '//cc:cc']
-- name: gcr.io/cloud-builders/docker
-  args: ['tag', 'bazel/cc:cc', 'gcr.io/$PROJECT_ID/cc:latest']
-
-- name: gcr.io/cloud-builders/bazel
-  args: ['run', '//java:java8']
-- name: gcr.io/cloud-builders/docker
-  args: ['tag', 'bazel/java:java8', 'gcr.io/$PROJECT_ID/java:latest']
-
-- name: gcr.io/cloud-builders/bazel
-  args: ['run', '//java/jetty']
-- name: gcr.io/cloud-builders/docker
-  args: ['tag', 'bazel/java/jetty:jetty', 'gcr.io/$PROJECT_ID/java/jetty:latest']
-
-- name: gcr.io/cloud-builders/bazel
-  args: ['run', '//nodejs:nodejs']
-- name: gcr.io/cloud-builders/docker
-  args: ['tag', 'bazel/nodejs:nodejs', 'gcr.io/$PROJECT_ID/nodejs:latest']
-
-- name: gcr.io/cloud-builders/bazel
-  args: ['run', '//python2.7:python27']
-- name: gcr.io/cloud-builders/docker
-  args: ['tag', 'bazel/python2.7:python27', 'gcr.io/$PROJECT_ID/python2.7:latest']
-
-# The resulting images to push to GCR.
-images: [
-  'gcr.io/$PROJECT_ID/base:latest',
-  'gcr.io/$PROJECT_ID/cc:latest',
-  'gcr.io/$PROJECT_ID/java:latest',
-  'gcr.io/$PROJECT_ID/java/jetty:latest',
-  'gcr.io/$PROJECT_ID/nodejs:latest',
-  'gcr.io/$PROJECT_ID/python2.7:latest'
-]
+  args: ['run', ':publish']
+  env: ['PROJECT_ID=$PROJECT_ID']
