--- a/dotnet/BUILD
+++ b/dotnet/BUILD
@@ -3,9 +3,9 @@ package(default_visibility = ["//visibility:public"])
 load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build")
 load("@package_bundle//file:packages.bzl", "packages")
 
-docker_build(
-    name = "dotnet",
-    base = "//cc:cc",
+[docker_build(
+    name = "dotnet" if not mode else mode[1:],
+    base = "//cc" + mode,
     debs = [
         packages["libcurl3"],
         packages["libgssapi-krb5-2"],
@@ -22,4 +22,7 @@ docker_build(
         "/usr/bin/dotnet": "/opt/dotnet/dotnet",
     },
     tars = ["@dotnet//:tar"],
-)
+) for mode in [
+    "",
+    ":debug",
+]]
