Add libgomp1 to the C++ image
This is required for C++ binaries compiled with -fopenmp.

--- a/cc/BUILD
+++ b/cc/BUILD
@@ -9,6 +9,7 @@ load("@package_bundle//file:packages.bzl", "packages")
     base = "//base" + mode,
     debs = [
         packages["libgcc1"],
+        packages["libgomp1"],
         packages["libstdc++6"],
     ],
 ) for mode in [
