Add import tests for the py3 standard library
This also adds additional shared libraries to the python 3 image which
are required by some of the standard library.

--- a/python3/BUILD
+++ b/python3/BUILD
@@ -10,6 +10,16 @@ load("@package_bundle//file:packages.bzl", "packages")
     base = "//cc" + mode,
     debs = [
         packages["zlib1g"],
+        packages["libbz2-1.0"],
+        packages["libncursesw5"],
+        packages["liblzma5"],
+        packages["libreadline7"],
+        packages["libtinfo5"],
+        packages["libsqlite3-0"],
+        # Different python packages have different transitive dependencies
+        # on the different libssl shared library versions.
+        packages["libssl1.0.2"],
+        packages["libssl1.1"],
         packages["libexpat1"],
         packages["python3.5-minimal"],
         packages["libpython3.5-minimal"],
