--- a/.bazelrc
+++ b/.bazelrc
@@ -1,3 +1,3 @@
-build --workspace_status_command=./print-workspace-status.sh
-test --workspace_status_command=./print-workspace-status.sh
-run --workspace_status_command=./print-workspace-status.sh
+build --workspace_status_command=./print-workspace-status.sh --cpu=k8
+test --workspace_status_command=./print-workspace-status.sh --cpu=k8
+run --workspace_status_command=./print-workspace-status.sh --cpu=k8
