Update rules_go. (#189)
* Update rules_go.

Signed-off-by: dlorenc <dlorenc@google.com>

* Fix tests.

* Buildifier

--- a/base/BUILD
+++ b/base/BUILD
@@ -108,6 +108,7 @@ structure_test(
 go_binary(
     name = "check_certs",
     srcs = ["testdata/check_certs.go"],
+    pure = "on",
 )
 
 docker_build(
