--- a/examples/nonroot/BUILD
+++ b/examples/nonroot/BUILD
@@ -3,6 +3,7 @@ load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build")
 load("@io_bazel_rules_docker//contrib:passwd.bzl", "passwd_entry", "passwd_file")
 load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
 load("@runtimes_common//structure_tests:tests.bzl", "structure_test")
+load("@io_bazel_rules_go//go:def.bzl", "go_binary")
 
 # Create a passwd file with a nonroot user and uid.
 passwd_entry(
@@ -36,17 +37,23 @@ docker_build(
 )
 
 # Simple go program to print out the username and uid.
-go_image(
+go_binary(
     name = "user",
     srcs = ["testdata/user.go"],
+    pure = "on",
+)
+
+docker_build(
+    name = "check_user_image",
     base = ":passwd_image",
+    files = [":user"],
     visibility = ["//visibility:private"],
 )
 
 # Test to verify this works :)
 structure_test(
-    name = "passwd_test",
+    name = "check_user_test",
     config = "testdata/user.yaml",
-    image = ":user",
+    image = ":check_user_image",
     visibility = ["//visibility:private"],
 )
