--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,8 @@ addons:
       - bazel
 
 install:
-  - go get -u github.com/bazelbuild/buildifier/buildifier
+  - export PATH=$PATH:$HOME/bin && mkdir -p $HOME/bin
+  - wget https://github.com/bazelbuild/buildtools/releases/download/0.11.1/buildifier && chmod +x buildifier && mv buildifier $HOME/bin/
   - sudo pip install pylint
 
 script:
