--- a/examples/dotnet/BUILD
+++ b/examples/dotnet/BUILD
@@ -5,7 +5,7 @@ load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
 
 docker_build(
     name = "hello",
-    base = "//dotnet:dotnet",
+    base = "//experimental/dotnet:dotnet",
     cmd = [
         "dotnet",
         "/bin/Release/netcoreapp2.0/hello.dll",
