--- a/examples/nodejs/BUILD
+++ b/examples/nodejs/BUILD
@@ -19,10 +19,10 @@ docker_build(
     ports = ["8000"],
 )
 
-load("@runtimes_common//structure_tests:tests.bzl", "structure_test")
+load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
 
-structure_test(
+container_test(
     name = "hello_test",
-    config = "testdata/hello.yaml",
+    configs = ["testdata/hello.yaml"],
     image = ":hello",
 )
