--- a/experimental/busybox/BUILD
+++ b/experimental/busybox/BUILD
@@ -1,6 +1,6 @@
 package(default_visibility = ["//base:__subpackages__"])
 
-load("@runtimes_common//structure_tests:tests.bzl", "structure_test")
+load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
 load(":commands.bzl", "BUSYBOX_COMMANDS")
 
 # For convenience, rename busybox-x86_64 to busybox.
