--- a/experimental/python2.7/testdata/python27.yaml
+++ b/experimental/python2.7/testdata/python27.yaml
@@ -6,6 +6,11 @@ commandTests:
   - name: version
     command: ["/usr/bin/python2.7", "--version"]
     expectedError: ["Python 2.7.13"]
+  # parts of the standard library assume /bin/sh exists via os.system and subprocess.Popen
+  - name: use_shell
+    command: ["/usr/bin/python2.7", "-c",
+      "import subprocess, sys; subprocess.check_call(sys.executable + ' -h', shell=True)"]
+    exitCode: 0
 
   - name: import_BaseHTTPServer
     command: ["/usr/bin/python2.7", "-c", "import BaseHTTPServer"]
