python: add libc-bin and ld.so.cache so ctypes works
Third-party packages like gunicorn and monotonic assume that the standard
library function ctypes.util.find_library can find 'c' and 'rt', which are
parts of glibc. To do this, they execute '/sbin/ldconfig -p'. To make this
work, install the binary in the libc-bin deb and generate /etc/ld.so.cache.

Ideally, we would generate /etc/ld.so.cache from the container at build
time. However, that would require users to have Docker. Instead, check in a
pre-generated binary, and add a test that checks that it equals the
generated version. This allows end users to build python images without
Docker, but developers working on Distroless will have a check that it is
up to date.

Fixes https://github.com/GoogleContainerTools/distroless/issues/150

--- a/experimental/python3/BUILD
+++ b/experimental/python3/BUILD
@@ -12,6 +12,7 @@ load("@package_bundle//file:packages.bzl", "packages")
         packages["dash"],
         packages["zlib1g"],
         packages["libbz2-1.0"],
+        packages["libc-bin"],
         packages["libncursesw5"],
         packages["liblzma5"],
         packages["libreadline7"],
@@ -33,6 +34,9 @@ load("@package_bundle//file:packages.bzl", "packages")
         "/usr/bin/python": "/usr/bin/python3.5",
         "/usr/bin/python3": "/usr/bin/python3.5",
     },
+    tars = [
+        "//experimental/python2.7:ld_so_cache.tar",
+    ],
 ) for mode in [
     "",
     ":debug",
