--- a/experimental/python2.7/testdata/python27.yaml
+++ b/experimental/python2.7/testdata/python27.yaml
@@ -10,6 +10,9 @@ commandTests:
   - name: use_shell
     command: ["/usr/bin/python2.7", "-c",
       "import subprocess, sys; subprocess.check_call(sys.executable + ' -h', shell=True)"]
+  # libraries like gunicorn and monotonic call glibc functions using ctypes
+  - name: use_ctypes_glibc
+    command: ["/usr/bin/python2.7", "-c", "import ctypes.util; ctypes.CDLL(ctypes.util.find_library('rt')).timer_create"]
     exitCode: 0
 
   - name: import_BaseHTTPServer
