include base-files package
the package includes the full text for various OSS licenses.

--- a/base/BUILD
+++ b/base/BUILD
@@ -60,6 +60,7 @@ cacerts(
 docker_build(
     name = "base",
     debs = [
+        packages["base-files"],
         packages["libc6"],
         packages["libssl1.1"],
         packages["openssl"],
