Include ca-certificates status file for traceability
Instead of creating a new tar from the ca-certificates.deb package
we now replace the data of the deb package with the flattened certs
tar file.

Since we're installing a debian package we'll get a status file
under /var/lib/dpkg/status.d/

We still retain compatability for those who use the 'cacerts'
rule to obtain a tar file

--- a/base/BUILD
+++ b/base/BUILD
@@ -66,6 +66,7 @@ docker_build(
         packages["openssl"],
         packages["netbase"],
         packages["tzdata"],
+        ":cacerts.deb",
     ],
     env = {
         "PATH": "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",
@@ -77,7 +78,6 @@ docker_build(
     tars = [
         ":passwd",
         ":group_tar",
-        ":cacerts.tar",
         ":tmp.tar",
         ":nsswitch.tar",
         "@debian_stretch//file:os_release.tar",
