--- a/java/testdata/java8_debug.yaml
+++ b/java/testdata/java8_debug.yaml
@@ -13,3 +13,6 @@ fileExistenceTests:
   - name: busybox
     path: "/busybox/sh"
     shouldExist: true
+  - name: no-shell
+    path: "/bin/sh"
+    shouldExist: false
