--- a/java/BUILD
+++ b/java/BUILD
@@ -23,18 +23,34 @@ cacerts_java(
         # We expect users to use:
         # cmd = ["/path/to/deploy.jar", "--option1", ...]
     ],
-    env = {
+    env = java_env + {
         "JAVA_VERSION": jre_ver(versions[jre_deb]),
     },
     symlinks = {
         "/usr/bin/java": java_executable_path,
     },
     tars = [":cacerts_java"],
-) for (rule_name, jre_deb, java_executable_path) in [
-    ("java8", "openjdk-8-jre-headless", "/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java"),
-    ("java8_debug", "openjdk-8-jre-headless", "/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java"),
-    ("java11", "openjdk-11-jre-headless", "/usr/lib/jvm/java-11-openjdk-amd64/bin/java"),
-    ("java11_debug", "openjdk-11-jre-headless", "/usr/lib/jvm/java-11-openjdk-amd64/bin/java"),
+) for (rule_name, jre_deb, java_executable_path, java_env) in [
+    (
+        "java8",
+        "openjdk-8-jre-headless",
+        "/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java",
+        {
+            # special container flags are unnecessary with 1.8.0_191 and beyond
+            "_JAVA_OPTIONS": "-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap",
+        },
+    ),
+    (
+        "java8_debug",
+        "openjdk-8-jre-headless",
+        "/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java",
+        {
+            # special container flags are unnecessary with 1.8.0_191 and beyond
+            "_JAVA_OPTIONS": "-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap",
+        },
+    ),
+    ("java11", "openjdk-11-jre-headless", "/usr/lib/jvm/java-11-openjdk-amd64/bin/java", {}),
+    ("java11_debug", "openjdk-11-jre-headless", "/usr/lib/jvm/java-11-openjdk-amd64/bin/java", {}),
 ]]
 
 load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
